install(DIRECTORY ./bongo
    DESTINATION "${PYTHON_SITEPACKAGES_PATH}/"
    FILES_MATCHING PATTERN "*.py"
    PATTERN ".svn" EXCLUDE
    )

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/bongo-storetool.py ${CMAKE_CURRENT_BINARY_DIR}/bongo-storetool)
install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/bongo-storetool DESTINATION
${SBIN_INSTALL_DIR})
